lib/crates/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__encode_url_attachments.snap
---
source: lib/crates/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "model": "gpt-test",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Describe these attachments."
        },
        {
          "type": "input_image",
          "image_url": "https://example.com/picture.png"
        },
        {
          "type": "input_text",
          "text": "[Document 'report.pdf': content type not supported by this provider]"
        }
      ]
    }
  ],
  "max_output_tokens": 128,
  "store": false,
  "include": [
    "reasoning.encrypted_content"
  ]
}
